[gd_scene load_steps=3 format=3 uid="uid://igwk7rtup65p"]

[ext_resource type="Script" path="res://addons/global_messenger/ui/create_new_global_signal_dialog.gd" id="1_4wdu7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6c6yg"]

[node name="create_new_global_signal_dialog" type="Window"]
title = "Create New Global Signal"
initial_position = 1
size = Vector2i(340, 47)
visible = false
wrap_controls = true
unresizable = true
popup_window = true
keep_title_visible = true
script = ExtResource("1_4wdu7")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_6c6yg")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = -1
theme_override_constants/margin_top = -1
theme_override_constants/margin_right = -1
theme_override_constants/margin_bottom = -1

[node name="text_input" type="LineEdit" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
alignment = 1

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_submitted" from="PanelContainer/MarginContainer/text_input" to="." method="_on_text_input_text_submitted"]
